Big refactoring - home fragment split

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,216 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragHomeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/homeLoadingText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="200dp"
-        android:text="@string/home_loading"
-        style="@style/Title"
-        />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/frameLayout"
-        >
+        android:id="@+id/homeFragContainer"
+        android:layout_above="@+id/homeBottomNav"/>
 
-
-    <LinearLayout
-        android:id="@+id/homeFragmentTopLayout"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="?attr/colorPrimary"
-        >
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
-
-        <ImageButton
-            android:id="@+id/homeToMenuButton"
-            android:layout_width="@dimen/large_text_size"
-            android:layout_height="@dimen/large_text_size"
-            style="?attr/imageButtonStyle"
-            android:contentDescription="@string/home_item_place_holder"
-            android:src="@drawable/baseline_arrow_back_24"
-            android:background="@android:color/transparent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="20dp"
-            />
+        android:id="@+id/homeBottomNav"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/home_bottom_navigation"/>
 
 
-        <TextView
-            android:id="@+id/homeName"
-            style="@style/Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textColor="?attr/colorOnPrimary"
-            android:text="@string/home_name_placeholder"
-            />
-
-        <ImageButton
-            android:id="@+id/homeSettingsButton"
-            android:layout_width="@dimen/large_text_size"
-            android:layout_height="@dimen/large_text_size"
-            android:contentDescription="@string/add_members_button"
-            android:background="@android:color/transparent"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/baseline_settings_24" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/homeRecyclerTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/home_all_chores_text"
-        app:layout_constraintTop_toBottomOf="@id/homeFragmentTopLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
-        android:textSize="@dimen/medium_text_size"
-        android:textStyle="bold"
-        />
-
-
-        <TextView
-            android:id="@+id/activeChoresButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="0dp"
-            android:padding="2dp"
-            android:minHeight="0dp"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:layout_marginStart="30dp"
-            app:layout_constraintStart_toEndOf="@id/homeRecyclerTitle"
-            app:layout_constraintEnd_toStartOf="@id/historyChoresButton"
-            app:layout_constraintTop_toTopOf="@id/homeRecyclerTitle"
-            app:layout_constraintBottom_toTopOf="@id/allChoresRecycler"
-            android:textColor="@color/primaryColor"
-            android:text="@string/home_active_chores_button"
-            />
-
-        <TextView
-            android:id="@+id/historyChoresButton"
-            android:minWidth="0dp"
-            android:padding="2dp"
-            android:minHeight="0dp"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/activeChoresButton"
-            app:layout_constraintTop_toTopOf="@id/homeRecyclerTitle"
-            app:layout_constraintBottom_toTopOf="@id/allChoresRecycler"
-            android:textColor="@color/primaryColor"
-            android:text="@string/home_history_chores_button"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content" />
-
-        <TextView
-        android:id="@+id/noChoresLeftText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/home_no_chores_left"
-        android:textSize="@dimen/medium_text_size"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
-        app:layout_constraintBottom_toTopOf="@id/addChoreButton"
-        />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/allChoresRecycler"
-            style="?attr/recyclerViewStyle"
-            app:layout_constraintBottom_toTopOf="@id/addChoreButton"
-            app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
-            android:layout_marginBottom="5dp"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="15dp">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addChoreButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_chore_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:src="@drawable/baseline_add_24"
-        app:layout_constraintBottom_toTopOf="@+id/homeFragmentBottomLayout"
-        android:contentDescription="@string/add_chore_button"
-        />
-
-    <LinearLayout
-        android:id="@+id/homeFragmentBottomLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="?attr/colorPrimaryVariant"
-        >
-
-        <Button
-            android:id="@+id/noticeBoardButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/notice_board_icon_desc"
-            style="?attr/buttonBarButtonStyle"
-            android:drawableTop="@drawable/baseline_note_alt_24"
-            />
-
-        <Button
-            android:id="@+id/homeChoreButton"
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content"
-            android:layout_weight="1"
-            style="?attr/buttonBarButtonStyle"
-            android:drawableTop="@drawable/baseline_checklist_24"
-            android:text="@string/home_icon_desc" />
-
-        <Button
-            android:id="@+id/homeSummaryButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/home_summary_button"
-            android:drawableTop="@drawable/baseline_bar_chart_24"
-            style="?attr/buttonBarButtonStyle"
-            />
-    </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
