--- a/app/src/main/res/layout/fragment_chore.xml
+++ b/app/src/main/res/layout/fragment_chore.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragHomeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChoreFragment">
+    tools:context=".fragments.ChoreFragment">
 
         <LinearLayout
             android:id="@+id/homeFragmentTopLayout"
@@ -90,7 +90,7 @@
             android:textSize="12sp"
             android:textStyle="bold"
             android:layout_marginStart="30dp"
-            app:layout_constraintStart_toEndOf="@id/homeRecyclerTitle"
+            android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toStartOf="@id/historyChoresButton"
             app:layout_constraintTop_toTopOf="@id/homeRecyclerTitle"
             app:layout_constraintBottom_toTopOf="@id/allChoresRecycler"
@@ -106,9 +106,9 @@
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/activeChoresButton"
             app:layout_constraintTop_toTopOf="@id/homeRecyclerTitle"
             app:layout_constraintBottom_toTopOf="@id/allChoresRecycler"
+            android:layout_marginEnd="20dp"
             android:textColor="@color/primaryColor"
             android:text="@string/home_history_chores_button"
             android:layout_height="wrap_content"
