--- a/app/src/main/res/layout/fragment_chore.xml
+++ b/app/src/main/res/layout/fragment_chore.xml
@@ -124,7 +124,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
-            app:layout_constraintBottom_toTopOf="@id/addChoreButton"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
         <androidx.recyclerview.widget.RecyclerView
