--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -89,7 +89,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
-            app:layout_constraintBottom_toTopOf="@id/addChoreButton"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
         <androidx.recyclerview.widget.RecyclerView
