--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -48,23 +48,21 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_weight="1"
                 android:layout_marginEnd="20dp"
                 android:textColor="?attr/colorOnPrimary"
                 />
 
             <ImageButton
                 android:id="@+id/menuSettingsButton"
-                android:layout_weight="1"
                 android:layout_width="@dimen/large_text_size"
                 android:layout_height="@dimen/large_text_size"
                 android:contentDescription="@string/add_members_button"
-                style="?attr/imageButtonStyle"
                 android:layout_marginEnd="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/baseline_account_circle_24" />
+                android:background="@android:color/transparent"
+                android:src="@drawable/baseline_person_24" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
