--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -36,17 +36,25 @@
                     />
 
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/homeName"
                     style="@style/Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/homeToMenuButton"
+                    app:layout_constraintEnd_toStartOf="@id/homeSettingsButton"
+                    android:layout_marginHorizontal="10dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:maxWidth="280dp"
+                    android:textSize="36sp"
                     android:textColor="?attr/colorOnPrimary"
                     android:text="@string/home_name_placeholder"
+                    app:autoSizeTextType="uniform"
+                    app:autoSizeMaxTextSize="36sp"
+                    app:autoSizeMinTextSize="20sp"
                     />
 
                 <ImageButton
