--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,11 +4,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/homeFragmentTopLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="?attr/colorPrimary"
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <ImageButton
+                android:id="@+id/homeToMenuButton"
+                android:layout_width="@dimen/large_text_size"
+                android:layout_height="@dimen/large_text_size"
+                style="?attr/imageButtonStyle"
+                android:contentDescription="@string/home_item_place_holder"
+                android:src="@drawable/baseline_arrow_back_24"
+                android:background="@android:color/transparent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="20dp"
+                />
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/homeName"
+                style="@style/Title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/homeToMenuButton"
+                app:layout_constraintEnd_toStartOf="@id/homeSettingsButton"
+                android:layout_marginHorizontal="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:gravity="center"
+                android:maxLines="1"
+                android:maxWidth="280dp"
+                android:textSize="36sp"
+                android:textColor="?attr/colorOnPrimary"
+                android:text=""
+                app:autoSizeTextType="uniform"
+                app:autoSizeMaxTextSize="36sp"
+                app:autoSizeMinTextSize="20sp"
+                />
+
+            <ImageButton
+                android:id="@+id/homeSettingsButton"
+                android:layout_width="@dimen/large_text_size"
+                android:layout_height="@dimen/large_text_size"
+                android:contentDescription="@string/add_members_button"
+                android:background="@android:color/transparent"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:src="@drawable/baseline_settings_24" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/homeFragContainer"
-        android:layout_above="@+id/homeBottomNav"/>
+        android:layout_above="@+id/homeBottomNav"
+        android:layout_below="@id/homeFragmentTopLayout"
+        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
@@ -18,5 +85,7 @@
         app:itemTextColor="?attr/colorOnPrimary"
         app:itemBackground="?attr/colorPrimary"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/home_bottom_navigation"/>
+        app:menu="@menu/home_bottom_navigation"
+        app:labelVisibilityMode="labeled"
+        />
 </RelativeLayout>
